force-app/main/default/objects/OrgSecurityLog__c/OrgSecurityLog__c.object-meta.xml
<CustomObject>
    <description>A log to capture security events.</description>
    <label>Org Security Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Org Security Log ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Security Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>