force-app/main/default/objects/OrgSecurityLog__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>