force-app/main/default/objects/OrgSecurityLog__c/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>