force-app/main/default/objects/OrgSecurityLog__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>