force-app/main/default/objects/OrgSecurityLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LogDate__c</columns>
    <columns>Severity__c</columns>
    <columns>EventType__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>