force-app/main/default/objects/OrgSecurityLog__c/listViews/Runtime.listView-meta.xml
<ListView>
    <fullName>Runtime</fullName>
    <columns>NAME</columns>
    <columns>LogDate__c</columns>
    <columns>Severity__c</columns>
    <columns>EventType__c</columns>
    <columns>Description__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>contains</operation>
        <value>Runtime</value>
    </filters>
    <label>Runtime Only</label>
    <language>en_US</language>
</ListView>